--- a/streamapp/templates/streamapp/index.html
+++ b/streamapp/templates/streamapp/index.html
@@ -224,7 +224,7 @@
             <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-6 gap-4">
                 {% for anime in anime_terbaru %}
                     <div class="group anime-card light-bg backdrop-blur-md rounded-lg overflow-hidden light-border hover:bg-primary/10 dark:hover:bg-white/20 transition-all duration-300">
-                        <a href="{% if anime.anime_slug %}{% url 'streamapp:detail_anime' anime.anime_slug %}{% elif anime.url and 'anime/' in anime.url %}{% url 'streamapp:detail_anime' anime.url|cut:'https://v1.samehadaku.how/anime/'|cut:'/' %}{% else %}#{% endif %}"
+                        <a href="{% if anime.anime_slug %}{% url 'streamapp:detail_anime' anime.anime_slug %}{% elif anime.url and 'anime/' in anime.url %}{% url 'streamapp:detail_anime' anime.url|cut:'https://gomunime.co/anime/'|cut:'/' %}{% else %}#{% endif %}"
                            class="block">
                             <div class="relative">
                                 <img src="{{ anime.cover }}"
@@ -274,7 +274,7 @@
             <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-6 gap-4">
                 {% for item in movie %}
                     <div class="group anime-card light-bg backdrop-blur-md rounded-lg overflow-hidden light-border hover:bg-primary/10 dark:hover:bg-white/20 transition-all duration-300">
-                        <a href="{% if item.anime_slug %}{% url 'streamapp:detail_anime' item.anime_slug %}{% elif item.url and 'anime/' in item.url %}{% url 'streamapp:detail_anime' item.url|cut:'https://v1.samehadaku.how/anime/'|cut:'/' %}{% else %}#{% endif %}"
+                        <a href="{% if item.anime_slug %}{% url 'streamapp:detail_anime' item.anime_slug %}{% elif item.url and 'anime/' in item.url %}{% url 'streamapp:detail_anime' item.url|cut:'https://gomunime.co/anime/'|cut:'/' %}{% else %}#{% endif %}"
                            class="block">
                             <div class="relative">
                                 <img src="{{ item.cover }}"
