--- a/streamapp/templates/streamapp/detail_episode_video.html
+++ b/streamapp/templates/streamapp/detail_episode_video.html
@@ -476,6 +476,13 @@
 {% endblock %}
 {% block extra_js %}
     <script>
+    // Set current API source information for dynamic API support
+    window.currentAPISource = {
+        name: '{{ api_source.name|default:"Default API" }}',
+        domain: '{{ api_source.domain|default:"gomunime.co" }}',
+        endpoint: '{{ api_source.endpoint|default:"https://api.gomunime.co/api/v1" }}'
+    };
+    
     // Inisialisasi variabel untuk melacak apakah anime sudah ditambahkan ke riwayat tontonan
     let animeAddedToHistory = false;
     
@@ -514,8 +521,8 @@
                     cover: currentAnimeCover
                 });
                 
-                // Tambahkan ke riwayat tontonan
-                addToWatchHistory(null, currentAnimeTitle, currentAnimeSlug, episodeSlug, episodeTitle, currentAnimeCover);
+                // Tambahkan ke riwayat tontonan dengan API source
+                addToWatchHistory(null, currentAnimeTitle, currentAnimeSlug, episodeSlug, episodeTitle, currentAnimeCover, window.currentAPISource);
                 animeAddedToHistory = true;
                 showNotification('Ditambahkan ke riwayat tontonan');
             {% endwith %}
